# patchwork

./: .gitignore  README.md  otio.py  pyproject.toml
assets/: logo.afphoto
src/: app.py  config.json  dpg.ini
src/patchwork/: __init__.py  app.py  async_helpers.py  cli.py  config.py  config.toml  constants.py  helpers.py  patchfile.py  routines.py  test.py
src/patchwork/settings/: __init__.py  default_settings.toml  manager.py
src/patchwork/widgets/: dialog_box.py
