[tool.poetry]
name = "patchwork"
version = "0.1.0"
description = "Patchable renders, git style!"
authors = ["in03 <in03@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.10"
pydavinci = {git = "https://github.com/in03/pydavinci"}
timecode = "^1.3.1"
chime = "^0.5.3"
rich = "^12.6.0"
tkinter-tooltip = "^2.1.0"
customtkinter = "^4.6.3"
dearpygui = "^1.8.0"
deepdiff = "^6.2.1"
PySide6 = "^6.4.1"
trio = "^0.22.0"
outcome = "^1.2.0"
tomli = "^2.0.1"
appdirs = "^1.4.4"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
patchwork = "patchwork.app:main"
