[tool.poetry]
name = "patchwork"
version = "0.1.0"
description = "Patchable renders, git style!"
authors = ["in03 <in03@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.10"
pydavinci = {git = "https://github.com/in03/pydavinci"}
timecode = "^1.3.1"
rich = "^12.6.0"
dearpygui = "^1.8.0"
ffmpeg-python = "^0.2.0"
typer = "^0.7.0"
inquirer = "^3.1.3"
pydantic = "^1.10.5"
rtoml = "^0.9.0"
pyfiglet = "^0.8.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
patchwork = "patchwork.cli:main"
